Some fixes to layout on small screens

--- a/client/src/scss/styles/_buttons.scss
+++ b/client/src/scss/styles/_buttons.scss
@@ -62,3 +62,14 @@ button.is-light {
 button + button {
   margin-left: $buttonRowLeftMargin;
 }
+
+/* Small screens */
+@media all and (max-width: 500px) {
+  button + button {
+    margin-left: 0;
+  }
+  button {
+    display: block !important;
+    margin-bottom: $buttonRowLeftMargin;
+  }
+}
